# micodb

./: .gitignore  Cargo.toml  README.md  RELEASE.md  build.rs  install.sh  node_config.json  worker_config.json
.cargo/: config.toml
.github/workflows/: release.yml
examples/: benchmark.py  simple_client.py
scripts/: build_test.sh  install.sh
src/: main.rs
src/auth/: credentials.rs  jwt.rs  mod.rs  permissions.rs
src/client/: connection.rs  error.rs  mod.rs  pool.rs  query_builder.rs  transaction.rs  types.rs
src/cluster/: coordinator.rs  discovery.rs  metadata.rs  mod.rs  node.rs  partition.rs
src/common/: error.rs
src/query/: mod.rs
src/server/: mod.rs
src/storage/: mod.rs
src/transaction/: mod.rs
