[package]
name = "micodb"
version = "0.0.1"
edition = "2024"
authors = ["Caio Ricciuti <caio.ricciuti@micodb.com>"]
description = "A high-performance columnar database for analytics and real-time data"
license = "AGPL-3.0-only"
repository = "https://github.com/micodb/micodb"

[dependencies]
# Core functionality
tokio = { version = "1", features = ["full"] } 
arrow = "55.1.0" # Umbrella crate, serde for schema will come from arrow-schema
arrow-schema = { version = "55.1.0", features = ["serde"] } # For Schema serde
parquet = "55.1.0"
datafusion = "47.0.0"

# Database essentials
sqlparser = "0.56.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Error handling
thiserror = "2.0.12"
anyhow = "1.0.98"

# Utilities
clap = { version = "4.5.38", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
criterion = "0.6.0"
tempfile = "3.20.0"
